[metadata]
name = keystonemiddleware-echo
summary = Echo your environment back to you
description-file =
    README.rst
author = Jamie Lennox
author-email = jamielennox@gmail.com
home-page = http://www.jamielennox.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    keystonemiddleware_echo

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystonemiddleware-echo/locale
domain = keystonemiddleware-echo

[update_catalog]
domain = keystonemiddleware-echo
output_dir = keystonemiddleware-echo/locale
input_file = keystonemiddleware-echo/locale/keystonemiddleware-echo.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystonemiddleware-echo/locale/keystonemiddleware-echo.pot

[entry_points]
wsgi_scripts =
    keystonemiddleware-echo = keystonemiddleware_echo.wsgi:echo_app

paste.app_factory =
    keystonemiddleware_echo = keystonemiddleware_echo.app:echo_app_factory

oslo.config.opts =
    keystonemiddleware_echo = keystonemiddleware_echo.config:list_opts
